ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: company-name.ru
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-ui-service
              port:
                number: 8080
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 8080
        - path: /stats
          pathType: Prefix
          backend:
            service:
              name: stats-service
              port:
                number: 8080
