default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: prod
spec:
  pod-selector: {}
  policyTypes:
  - Ingress
  - Egress
